# chromaprint-rs

./: .gitmodules  Cargo.toml
chromaprint_rs/: Cargo.toml
chromaprint_rs/src/: buffer.rs  lib.rs
chromaprint_sys/: Cargo.toml  build.rs
chromaprint_sys/src/: lib.rs
chromaprint_sys/tests/: ctest.rs
